fixed bare styles on safari

--- a/sass/px-dropdown.scss
+++ b/sass/px-dropdown.scss
@@ -60,9 +60,11 @@ $inuit-enable-btn--bare--primary: true;
   flex-grow: 1;
   text-overflow: ellipsis;
   text-align: left;
+  line-height: calc(#{2em} - 2px);
 }
 .dropdown-icon {
   width: 1rem;
+  height: 2rem;
   margin-left: $inuit-base-spacing-unit--tiny;
 }
 .dropdown-content {
@@ -95,7 +97,6 @@ $inuit-enable-btn--bare--primary: true;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  pointer-events: none;
 }
 .checkbox {
   margin-right: $inuit-base-spacing-unit--tiny;
